--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zach!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="IMG_4610.PNG" width="300px">
+    <img src="IMG_4610.PNG">
 </body>
 </html>
